--- a/src/options/index.html
+++ b/src/options/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <base target="_blank" />
-    <title>Sidepanel</title>
+    <title>Options</title>
   </head>
-  <body style="min-width: 300px">
+  <body>
     <div id="app"></div>
     <script type="module" src="./main.ts"></script>
   </body>
