--- a/src/options/index.html
+++ b/src/options/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <base target="_blank" />
-    <title>Options</title>
+    <title>结果页</title>
   </head>
   <body>
     <div id="app"></div>
