--- a/src/sidepanel/index.html
+++ b/src/sidepanel/index.html
@@ -5,7 +5,7 @@
     <base target="_blank" />
     <title>Sidepanel</title>
   </head>
-  <body style="min-width: 300px">
+  <body>
     <div id="app"></div>
     <script type="module" src="./main.ts"></script>
   </body>
